--- a/api-gateway/gateway/src/main/resources/application.yml
+++ b/api-gateway/gateway/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
         - id: registration-service
           uri: lb://registration-service
           predicates:
-            - Path=/api/v1/users/**, /api/v1/passport/**, /api/v1/addresses/**, /api/v1/auth/**
+            - Path=/api/v1/users/**, /api/v1/passport/**, /api/v1/addresses/**, /api/v1/auth/**, /api/v1/user/**
         - id: information-service
           uri: lb://information-service
           predicates:
