MRN-581 some fixes

--- a/deposit-service/gradle.properties
+++ b/deposit-service/gradle.properties
@@ -5,3 +5,4 @@ springDependencyManagementVersion=1.0.11.RELEASE
 javafakerVersion=1.0.2
 testcontainersVersion=1.16.2
 springCloudVersion=2021.0.1
+resourseServiceVersion=2.7.3
