--- a/deposit-service/build.gradle
+++ b/deposit-service/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:2.7.3'
+	implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server:$resourseServiceVersion"
 	implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
     testImplementation 'org.projectlombok:lombok:1.18.22'
 	compileOnly 'org.projectlombok:lombok'
