--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ build jars:
       - notification-service/build/libs/*.jar
       - information-service/build/libs/*.jar
       - config-service/build/libs/*.jar
+      - cresdit-service/build/libs/*.jar
       # - api-gateway/**/build/libs/*.jar
       # - '**/build/libs/*.jar'
     expire_in: 1 day
@@ -426,6 +427,7 @@ test:
         - "notification-service/build/test-results/test/TEST-*.xml"
         - "information-service/build/test-results/test/TEST-*.xml"
         - "config-service/build/test-results/test/TEST-*.xml"
+        - "credit-service/build/test-results/test/TEST-*.xml"
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
