Created card DeactivationScheduler. Change endpoint of deleting card to deactivating.

--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -66,3 +66,6 @@ eureka:
 keycloak:
   uri:
     jwks: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
+
+scheduler:
+  card: "0 0 0 * * *"
