Added threadPool for schedulers

--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 8182
 
 spring:
+  task:
+    scheduling:
+      pool:
+        size: 4
   application:
     name: payment-service
   datasource:
