--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,4 +1,2 @@
 server.port=8888
-spring.cloud.config.server.git.uri=https://git.andersenlab.com/Andersen/meetingroom-new/config-repo.git
-spring.cloud.config.server.git.skip-ssl-validation=true
-spring.cloud.config.server.git.timeout=5
+spring.cloud.config.server.git.uri=https://git.andersenlab.com/Andersen/meetingroom-new/config-repo
