--- a/deposit-service/build.gradle
+++ b/deposit-service/build.gradle
@@ -22,7 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server:$resourseServiceVersion"
 	implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
+    testImplementation 'org.projectlombok:lombok:1.18.22'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.flywaydb:flyway-core'
@@ -36,13 +38,11 @@ dependencies {
 	testImplementation 'org.testcontainers:kafka'
 	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.testcontainers:testcontainers'
-	testRuntimeOnly 'com.h2database:h2'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.springframework.kafka:spring-kafka-test'
 	testRuntimeOnly 'com.h2database:h2'
-	implementation "org.springframework.cloud:spring-cloud-starter-config:$springConfigVersion"
 }
 
 dependencyManagement {
