MRN-734 Get notification endpoint does not work correctly in the Notification service

--- a/notification-service/gradle.properties
+++ b/notification-service/gradle.properties
@@ -1,3 +1,5 @@
 springCloudVersion=2021.0.1
 springdocVersion=1.6.8
 mapstructVersion=1.4.2.Final
+lombokVersion=1.18.20
+mapstructBindingVersion=0.2.0
