MRN-655 replenishment of money to the deposit account from the card

--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -28,7 +28,6 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-oauth2-jose'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
 	implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
-	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.projectlombok:lombok:1.18.20'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -40,13 +39,16 @@ dependencies {
 	implementation "com.github.javafaker:javafaker:$javafakerVersion"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.testcontainers:junit-jupiter'
-	testImplementation 'org.testcontainers:kafka'
 	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.testcontainers:testcontainers'
 	testRuntimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.retry:spring-retry:1.2.5.RELEASE'
 	implementation 'org.springframework:spring-aspects:5.3.22'
+
+	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
+
 }
 
 dependencyManagement {
