--- a/deposit-service/build.gradle
+++ b/deposit-service/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka-test'
 	testRuntimeOnly 'com.h2database:h2'
 
+	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
+
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	implementation "org.springframework.cloud:spring-cloud-starter-config:$springConfigVersion"
 }
