MRN-682_develop_a_mechanism_for_closing_a_deposit_account_automatically

--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -39,6 +39,14 @@ spring:
     consumer:
       group-id: payment-service
 
+  task:
+    scheduling:
+      pool:
+        size: 4
+
+scheduler:
+  deposit: "0 0 0 * * *"
+
 eureka:
   instance:
     instance-id: ${spring.application.name}-${random.uuid}
