--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-stream'
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 
+	implementation 'org.springframework.data:spring-data-envers'
 }
 
 dependencyManagement {
