--- a/credit-service/gradle.properties
+++ b/credit-service/gradle.properties
@@ -1,3 +1,5 @@
 mapstructVersion=1.4.2.Final
 lombokVersion=1.18.20
 mapstructBindingVersion=0.2.0
+springdocVersion=1.6.11
+springCloudVersion=3.1.1
