--- a/credit-service/src/main/resources/application.yml
+++ b/credit-service/src/main/resources/application.yml
@@ -22,6 +22,14 @@ logging:
     org.springframework: INFO
     com.andersen: TRACE
 
+eureka:
+  instance:
+    instance-id: ${spring.application.name}-${random.uuid}
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: http://10.10.14.31:30100/eureka
+
 springdoc:
   show-actuator: true
   use-management-port: false
