--- a/credit-service/build.gradle
+++ b/credit-service/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:$springCloudVersion"
+    implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
     implementation 'org.flywaydb:flyway-core'
     implementation "org.mapstruct:mapstruct:$mapstructVersion"
     implementation "org.projectlombok:lombok:$lombokVersion"
