Fixed card product endpoints (added values eureka config)

--- a/api-gateway/gateway/src/main/resources/application.yml
+++ b/api-gateway/gateway/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
         - id: payment-service
           uri: lb://payment-service
           predicates:
-            - Path=/api/v1/cards/**
+            - Path=/api/v1/cards/**, /api/v1/card_products/**
         - id: registration-service
           uri: lb://registration-service
           predicates:
