--- a/credit-service/build.gradle
+++ b/credit-service/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok-mapstruct-binding:$mapstructBindingVersion"
 
-
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
 }
 
 tasks.named('test') {
