MRN-956 refactor swagger

--- a/transfer-service/src/main/resources/application.yml
+++ b/transfer-service/src/main/resources/application.yml
@@ -32,6 +32,15 @@ spring:
     user: psqluser
     password: PoSPa$$woRd
 
+  cache:
+    type: redis
+    redis:
+      cache-null-values: true
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
+
   redis:
     host: 10.10.14.31
     port: 30002
