--- a/information-service/build.gradle
+++ b/information-service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'com.dropbox.core:dropbox-core-sdk:5.2.0'
     implementation "com.github.javafaker:javafaker:1.0.2"
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.4'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
