--- a/information-service/src/main/resources/application.yml
+++ b/information-service/src/main/resources/application.yml
@@ -23,6 +23,22 @@ spring:
         jwt:
           issuer-uri: http://10.10.14.31:30001/auth/realms/Meetingroom-New
           jwk-set-uri: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
+  cache:
+    type: redis
+    redis:
+      cache-null-values: true
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
+
+  redis:
+    host: 10.10.14.31
+    port: 30002
+    timeout: 2000ms
+    database: 1
+    password: JsuuII12
+    duration-days-to-delete: 1
 
 
 logging:
