--- a/transfer-service/src/main/resources/application.yml
+++ b/transfer-service/src/main/resources/application.yml
@@ -60,6 +60,10 @@ spring:
     bootstrap-servers: 10.10.14.68:19092
     consumer:
       group-id: payment-service
+      max-poll-records: 100
+      heartbeat-interval: 1000
+    listener:
+      poll-timeout: 30000
 
 eureka:
   instance:
