--- a/information-service/src/main/resources/application.yml
+++ b/information-service/src/main/resources/application.yml
@@ -38,7 +38,11 @@ spring:
     timeout: 2000ms
     database: 1
     password: JsuuII12
-    duration-days-to-delete: 1
+
+  task:
+    scheduling:
+      pool:
+        size: 2
 
 
 logging:
@@ -82,3 +86,7 @@ eureka:
 
 uri:
   exchange-rates: https://api.exchangerate.host/latest
+
+scheduler:
+  cache:
+    exchange-rates: "0 0 0 * * *"
