--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -51,8 +51,8 @@ dependencies {
 
 	implementation 'org.springframework.cloud:spring-cloud-stream'
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
-
 	implementation 'org.springframework.data:spring-data-envers'
+	implementation("com.google.guava:guava:31.1-jre")
 }
 
 dependencyManagement {
