MRN-962 repair scheduled

--- a/information-service/src/main/resources/application.yml
+++ b/information-service/src/main/resources/application.yml
@@ -87,6 +87,8 @@ eureka:
 uri:
   exchange-rates: https://api.exchangerate.host/latest
 
-scheduler:
-  cache:
+cache:
+  name:
+    exchange-rates: exchange-rates
+  scheduler:
     exchange-rates: "0 0 0 * * *"
