--- a/information-service/build.gradle
+++ b/information-service/build.gradle
@@ -15,6 +15,7 @@ configurations {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
@@ -37,16 +38,24 @@ dependencies {
     implementation 'com.dropbox.core:dropbox-core-sdk:5.2.0'
     implementation "com.github.javafaker:javafaker:1.0.2"
     implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.4'
+    implementation 'com.playtika.reactivefeign:feign-reactor-spring-cloud-starter:3.2.4'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.security:spring-security-test:4.2.3.RELEASE'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:kafka'
     testImplementation 'org.testcontainers:postgresql'
     testImplementation 'org.testcontainers:testcontainers'
     testRuntimeOnly 'com.h2database:h2'
+
+    implementation 'com.adelean:inject-resources-core:0.1.0'
+    testImplementation 'com.adelean:inject-resources-junit-jupiter:0.1.0'
 }
 
 dependencyManagement {
