MRN-401 fix gateway

--- a/api-gateway/gateway/src/main/resources/application.yml
+++ b/api-gateway/gateway/src/main/resources/application.yml
@@ -3,6 +3,8 @@ app:
     clientId: api-gateway
 
 spring:
+  main:
+    web-application-type: reactive
   application:
     name: api-gateway
   cloud:
