create exception CardIsNotReadyToUseEception and modify  TransferMoneyTopicListenerImpl and TransferReplinismentMoneyServiceImpl

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,7 @@ out/
 ### Mapper Impl ###
 !**/src/main/generated/**
 
-
+.jpb/
+payment-service/src/main/generated/
 payment-service/src/main/resources/application-local.yml
+transfer-service/src/main/resources/application-local.yml
