add validation to non active credit cards

--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,6 @@ out/
 
 .jpb/
 payment-service/src/main/generated/
+transfer-service/src/main/generated/
 payment-service/src/main/resources/application-local.yml
 transfer-service/src/main/resources/application-local.yml
